--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "autoprefixer": "^9.7.4",
+    "inputmask": "^5.0.3",
+    "jquery": "^3.4.1",
     "postcss-modules": "^1.5.0"
   },
   "browserslist": [
