--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,18 +4,24 @@
     "es6": true
   },
   "extends": [
-    "airbnb-base"
+    "airbnb-base",
+    "plugin:proposal/recommended"
   ],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
+  "plugins": [
+    "proposal"
+  ],
   "rules": {
     "no-underscore-dangle": 0,
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "prefer-destructuring": 0
   }
 }
