--- a/package.json
+++ b/package.json
@@ -10,26 +10,28 @@
   "author": "Aleinbanger",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "babel-eslint": "^10.1.0",
     "babel-preset-airbnb": "^4.4.0",
     "cssnano": "^4.1.10",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-proposal": "^2.3.0",
     "pug": "^2.0.4",
-    "sass": "^1.25.1-test.1",
-    "stylelint": "^13.2.0",
+    "sass": "^1.26.3",
+    "stylelint": "^13.2.1",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.0.0",
-    "stylelint-scss": "^3.14.2"
+    "stylelint-scss": "^3.16.0"
   },
   "dependencies": {
-    "autoprefixer": "^9.7.4",
+    "autoprefixer": "^9.7.5",
     "inputmask": "^5.0.3",
     "jquery": "^3.4.1",
     "postcss-modules": "^1.5.0"
   },
-  "browserslist": [
-    "defaults"
-  ]
+  "browserslist": "> 0.25%, not dead"
 }
