--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "stylelint-scss": "^3.16.0"
   },
   "dependencies": {
+    "air-datepicker": "^2.2.3",
     "autoprefixer": "^9.7.5",
     "inputmask": "^5.0.3",
     "jquery": "^3.4.1",
