--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "air-datepicker": "^2.2.3",
     "autoprefixer": "^9.7.5",
     "inputmask": "^5.0.3",
+    "ion-rangeslider": "^2.3.1",
     "jquery": "^3.4.1",
     "postcss-modules": "^1.5.0"
   },
