Start transition to Webpack
Add necessary Webpack loaders.
Also use postcss-preset-env instead of autoprefixer
and add core-js polyfills to use along with @babel/preset-env.

--- a/.postcssrc.json
+++ b/.postcssrc.json
@@ -1,8 +1,10 @@
 {
-  "modules": false,
   "plugins": {
-    "autoprefixer": {
-      "grid": true
+    "postcss-preset-env": {
+      "stage": 2,
+      "autoprefixer": {
+        "grid": true
+      }
     }
   }
 }
