--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fsd-website",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "source/pages/website/landing-page.pug",
   "scripts": {
@@ -21,30 +22,45 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.10.2",
     "babel-eslint": "^10.1.0",
     "babel-preset-airbnb": "^4.4.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.5.3",
     "cssnano": "^4.1.10",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-proposal": "^2.3.0",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "pug": "^2.0.4",
+    "pug-loader": "^2.4.0",
     "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
     "stylelint": "^13.2.1",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.0.0",
-    "stylelint-scss": "^3.16.0"
+    "stylelint-scss": "^3.16.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "air-datepicker": "^2.2.3",
-    "autoprefixer": "^9.7.5",
+    "core-js": "^3.6.5",
     "inputmask": "^5.0.3",
     "ion-rangeslider": "^2.3.1",
     "jquery": "^3.5.1",
     "material-icons": "^0.3.1",
-    "postcss-modules": "^1.5.0"
+    "regenerator-runtime": "^0.13.5"
   },
   "browserslist": "defaults"
 }
