--- a/.postcssrc.json
+++ b/.postcssrc.json
@@ -1,9 +1,9 @@
 {
   "plugins": {
     "postcss-preset-env": {
-      "stage": 2,
+      "stage": 0,
       "autoprefixer": {
-        "grid": true
+        "grid": false
       }
     }
   }
