--- a/package.json
+++ b/package.json
@@ -5,17 +5,8 @@
   "description": "",
   "main": "source/pages/website/landing-page.pug",
   "scripts": {
-    "dev": "parcel source/pages/ui-kit/form-elements.pug",
-    "dev-landing": "parcel source/pages/website/landing-page.pug",
-    "dev-search": "parcel source/pages/website/search-room.pug",
-    "dev-room": "parcel source/pages/website/room-details.pug",
-    "dev-registration": "parcel source/pages/website/registration.pug",
-    "dev-signin": "parcel source/pages/website/sign-in.pug",
-    "build": "parcel build source/pages/website/landing-page.pug --public-url ./"
-  },
-  "alias": {
-    "blocks": "./source/blocks/",
-    "node_modules": "./node_modules"
+    "dev": "webpack-dev-server  --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "author": "Aleinbanger",
   "license": "MIT",
