--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "description": "",
-  "main": "source/pages/website/landing-page.pug",
+  "main": "./source/scripts/index.js",
   "scripts": {
     "dev": "webpack-dev-server  --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "prod": "webpack --config webpack.prod.js"
   },
   "author": "Aleinbanger",
   "license": "MIT",
@@ -15,6 +15,7 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.10.2",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
     "babel-preset-airbnb": "^4.4.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
