--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-proposal": "^2.3.0",
     "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "pug": "^2.0.4",
-    "pug-loader": "^2.4.0",
+    "pug-html-loader": "^1.1.5",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
