--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^8.1.0",
     "babel-preset-airbnb": "^4.4.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.2",
     "css-loader": "^3.5.3",
     "cssnano": "^4.1.10",
     "eslint": "^6.8.0",
