--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "name": "fsd-website",
-  "version": "1.0.0",
   "private": true,
-  "description": "",
   "main": "./source/scripts/index.js",
   "scripts": {
     "dev": "webpack-dev-server  --config webpack.dev.js",
@@ -12,19 +10,18 @@
   "author": "Aleinbanger",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.10.2",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "babel-preset-airbnb": "^4.4.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.2",
-    "css-loader": "^3.5.3",
-    "cssnano": "^4.1.10",
+    "copy-webpack-plugin": "^6.0.3",
+    "core-js": "^3.6.5",
+    "css-loader": "^3.6.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-proposal": "^2.3.0",
     "file-loader": "^6.0.0",
     "gh-pages": "^3.1.0",
@@ -36,28 +33,26 @@
     "postcss-preset-env": "^6.7.0",
     "pug": "^2.0.4",
     "pug-html-loader": "^1.1.5",
-    "sass": "^1.26.3",
+    "regenerator-runtime": "^0.13.5",
+    "sass": "^1.26.10",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
-    "stylelint": "^13.2.1",
+    "stylelint": "^13.6.1",
     "stylelint-config-sass-guidelines": "^7.0.0",
-    "stylelint-config-standard": "^20.0.0",
-    "stylelint-order": "^4.0.0",
-    "stylelint-scss": "^3.16.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.18.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@fortawesome/fontawesome-free": "^5.13.1",
     "air-datepicker": "^2.2.3",
-    "core-js": "^3.6.5",
     "inputmask": "^5.0.3",
     "ion-rangeslider": "^2.3.1",
     "jquery": "^3.5.1",
-    "material-icons": "^0.3.1",
-    "regenerator-runtime": "^0.13.5"
+    "material-icons": "^0.3.1"
   },
   "browserslist": "defaults"
 }
