--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,15 +10,33 @@
   ],
   "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 2018,
+    "ecmaVersion": 12,
     "sourceType": "module"
   },
   "plugins": [
     "proposal"
   ],
+  "ignorePatterns": [
+    "node_modules/",
+    "build/",
+    "webpack.*.js"
+  ],
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "moduleDirectory": ["node_modules/", "source/"]
+      }
+    }
+  },
   "rules": {
     "no-underscore-dangle": 0,
-    "linebreak-style": 0,
-    "prefer-destructuring": 0
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": true,
+        "optionalDependencies": true,
+        "peerDependencies": true
+      }
+    ]
   }
 }
